--- a/etc/fwkit/services/local/ftp.service
+++ b/etc/fwkit/services/local/ftp.service
@@ -2,13 +2,13 @@
 modprobe nf_conntrack_ftp
 
 # control connections
-iptables -A INPUT -p tcp -m tcp --dport 21 -m conntrack --cstate ESTABLISHED,NEW -j ACCEPT
-iptables -A OUTPUT -p tcp -m tcp --dport 21 -m conntrack --cstate NEW,ESTABLISHED -j ACCEPT
+iptables -A INPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate ESTABLISHED,NEW -j ACCEPT
+iptables -A OUTPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
 
 # active data connections
-iptables -A INPUT -p tcp -m tcp --dport 20 -m conntrack --cstate ESTABLISHED,RELATED -j ACCEPT
-iptables -A OUTPUT -p tcp -m tcp --dport 20 -m conntrack --cstate ESTABLISHED -j ACCEPT
+iptables -A INPUT -p tcp -m tcp --dport 20 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
+iptables -A OUTPUT -p tcp -m tcp --dport 20 -m conntrack --ctstate ESTABLISHED -j ACCEPT
 
 # passive data connections
-iptables -A INPUT -p tcp -m tcp --sport 1024: --dport 1024: -m conntrack --cstate ESTABLISHED -j ACCEPT
-iptables -A OUTPUT -p tcp -m tcp --sport 1024: --dport 1024: -m conntrack --cstate ESTABLISHED,RELATED -j ACCEPT
+iptables -A INPUT -p tcp -m tcp --sport 1024: --dport 1024: -m conntrack --ctstate ESTABLISHED -j ACCEPT
+iptables -A OUTPUT -p tcp -m tcp --sport 1024: --dport 1024: -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
