--- a/etc/fwkit/services/local/http.service
+++ b/etc/fwkit/services/local/http.service
@@ -1,2 +1,2 @@
 # fwkit - local/http.service
-iptables -A INPUT -p tcp --dport 80 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 80 -m conntrack --ctstate NEW -j ACCEPT
