--- a/etc/fwkit/services/local/kerberos.service
+++ b/etc/fwkit/services/local/kerberos.service
@@ -1,3 +1,3 @@
 # fwkit - local/kerberos.service
-iptables -A INPUT -p tcp --dport 88 -m conntrack --cstate NEW -j ACCEPT
-iptables -A INPUT -p udp --dport 88 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 88 -m conntrack --ctstate NEW -j ACCEPT
+iptables -A INPUT -p udp --dport 88 -m conntrack --ctstate NEW -j ACCEPT
