--- a/etc/fwkit/services/local/ldap.service
+++ b/etc/fwkit/services/local/ldap.service
@@ -1,3 +1,3 @@
 # fwkit - local/ldap.service
-iptables -A INPUT -p tcp --dport 389 -m conntrack --cstate NEW -j ACCEPT
-iptables -A INPUT -p udp --dport 289 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 389 -m conntrack --ctstate NEW -j ACCEPT
+iptables -A INPUT -p udp --dport 289 -m conntrack --ctstate NEW -j ACCEPT
