--- a/etc/fwkit/services/local/msgc-ssl.service
+++ b/etc/fwkit/services/local/msgc-ssl.service
@@ -1,2 +1,2 @@
 # fwkit - local/msgc-ssl.service - Microsoft Global Catalog (SSL)
-iptables -A INPUT -p tcp --dport 3269 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 3269 -m conntrack --ctstate NEW -j ACCEPT
