--- a/etc/fwkit/services/local/msgc.service
+++ b/etc/fwkit/services/local/msgc.service
@@ -1,2 +1,2 @@
 # fwkit - local/msgc.service - Microsoft Global Catalog
-iptables -A INPUT -p tcp --dport 3268 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 3268 -m conntrack --ctstate NEW -j ACCEPT
