--- a/etc/fwkit/services/local/msrpc.service
+++ b/etc/fwkit/services/local/msrpc.service
@@ -1,7 +1,7 @@
 # fwkit - local/msrpc.service - Dynamic RPC Ports
 
 # prior to samba 4.7
-iptables -A INPUT -p tcp --dport 49152:65525 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 49152:65525 -m conntrack --ctstate NEW -j ACCEPT
 
 # samba 4.7+
-iptables -A INPUT -p tcp --dport 1024:1300 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 1024:1300 -m conntrack --ctstate NEW -j ACCEPT
