--- a/etc/fwkit/services/local/smb.service
+++ b/etc/fwkit/services/local/smb.service
@@ -1,2 +1,2 @@
 # fwkit - local/smb.service
-iptables -A INPUT -p tcp --dport 445 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p tcp --dport 445 -m conntrack --ctstate NEW -j ACCEPT
