--- a/etc/fwkit/services/local/tftp.service
+++ b/etc/fwkit/services/local/tftp.service
@@ -1,3 +1,3 @@
 # fwkit - local/tftp.service
 modprobe nf_conntrack_tftp
-iptables -A INPUT -p udp --dport 69 -m conntrack --cstate NEW -j ACCEPT
+iptables -A INPUT -p udp --dport 69 -m conntrack --ctstate NEW -j ACCEPT
