--- a/etc/fwkit/services/remote/dns.service
+++ b/etc/fwkit/services/remote/dns.service
@@ -1,3 +1,3 @@
 # fwkit - remote/dns.service
-iptables -A OUTPUT -p tcp --dport 53 -m conntrack --cstate NEW -j ACCEPT
-iptables -A OUTPUT -p udp --dport 53 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
+iptables -A OUTPUT -p udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
