--- a/etc/fwkit/services/remote/msgc-ssl.service
+++ b/etc/fwkit/services/remote/msgc-ssl.service
@@ -1,2 +1,2 @@
 # fwkit - remote/msgc-ssl.service - Microsoft Global Catalog (SSL)
-iptables -A OUTPUT -p tcp --dport 3269 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p tcp --dport 3269 -m conntrack --ctstate NEW -j ACCEPT
