--- a/etc/fwkit/services/remote/msgc.service
+++ b/etc/fwkit/services/remote/msgc.service
@@ -1,2 +1,2 @@
 # fwkit - remote/msgc.service - Microsoft Global Catalog
-iptables -A OUTPUT -p tcp --dport 3268 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p tcp --dport 3268 -m conntrack --ctstate NEW -j ACCEPT
