--- a/etc/fwkit/services/remote/msrpc.service
+++ b/etc/fwkit/services/remote/msrpc.service
@@ -1,7 +1,7 @@
 # fwkit - remote/msrpc.service - Dynamic RPC Ports
 
 # prior to samba 4.7
-iptables -A OUTPUT -p tcp --dport 1024:1300 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p tcp --dport 1024:1300 -m conntrack --ctstate NEW -j ACCEPT
 
 # samba 4.7+
-iptables -A OUTPUT -p tcp --dport 49152:65535 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p tcp --dport 49152:65535 -m conntrack --ctstate NEW -j ACCEPT
