--- a/etc/fwkit/services/remote/ntp.service
+++ b/etc/fwkit/services/remote/ntp.service
@@ -1,2 +1,2 @@
 # fwkit - remote/ntp.service
-iptables -A OUTPUT -p udp --dport 123 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
