--- a/etc/fwkit/services/remote/smb.service
+++ b/etc/fwkit/services/remote/smb.service
@@ -1,2 +1,2 @@
 # fwkit - remote/smb.service
-iptables -A OUTPUT -p tcp --dport 445 -m conntrack --cstate NEW -j ACCEPT
+iptables -A OUTPUT -p tcp --dport 445 -m conntrack --ctstate NEW -j ACCEPT
