--- a/etc/fwkit/services/local/smb.service
+++ b/etc/fwkit/services/local/smb.service
@@ -1,2 +1,2 @@
-# fwkit - local/smb.service
+# fwkit - local/smb.service - Server Message Block (SMB); 445/tcp
 iptables -A INPUT -p tcp --dport 445 -m conntrack --ctstate NEW -j ACCEPT
