--- a/etc/fwkit/services/remote/smb.service
+++ b/etc/fwkit/services/remote/smb.service
@@ -1,2 +1,2 @@
-# fwkit - remote/smb.service
+# fwkit - remote/smb.service - Server Message Block (SMB); 445/tcp
 iptables -A OUTPUT -p tcp --dport 445 -m conntrack --ctstate NEW -j ACCEPT
