--- a/etc/fwkit/services/local/cups.service
+++ b/etc/fwkit/services/local/cups.service
@@ -1,3 +1,3 @@
-# fwkit - local/cups.service
+# fwkit - local/cups.service - CUPS (IPP); 631/tcp, 631/udp
 iptables -A INPUT -p tcp --dport 631 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A INPUT -p udp --dport 631 -m conntrack --ctstate NEW -j ACCEPT
