--- a/etc/fwkit/services/local/dns.service
+++ b/etc/fwkit/services/local/dns.service
@@ -1,3 +1,3 @@
-# fwkit - local/dns.service
+# fwkit - local/dns.service - Domain Name Service; 53/tcp, 53/udp
 iptables -A INPUT -p tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A INPUT -p udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
