--- a/etc/fwkit/services/local/ldap.service
+++ b/etc/fwkit/services/local/ldap.service
@@ -1,3 +1,3 @@
-# fwkit - local/ldap.service
+# fwkit - local/ldap.service - Lightweight Directory Access Protocol; 389/tcp, 389/udp
 iptables -A INPUT -p tcp --dport 389 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A INPUT -p udp --dport 389 -m conntrack --ctstate NEW -j ACCEPT
