--- a/etc/fwkit/services/local/ldaps.service
+++ b/etc/fwkit/services/local/ldaps.service
@@ -1,2 +1,2 @@
-# fwkit - local/ldaps.service
+# fwkit - local/ldaps.service - Lightweight Directory Access Protocol over TLS; 636/tcp
 iptables -A INPUT -p tcp --dport 636 -m conntrack --ctstate NEW -j ACCEPT
