--- a/etc/fwkit/services/local/msgc.service
+++ b/etc/fwkit/services/local/msgc.service
@@ -1,2 +1,2 @@
-# fwkit - local/msgc.service - Microsoft Global Catalog
+# fwkit - local/msgc.service - Microsoft Global Catalog (Active Directory); 3268/tcp
 iptables -A INPUT -p tcp --dport 3268 -m conntrack --ctstate NEW -j ACCEPT
