--- a/etc/fwkit/services/local/rpcls.service
+++ b/etc/fwkit/services/local/rpcls.service
@@ -1,2 +1,2 @@
-# fwkit - local/rpcls.service - End Point Mapper (DCE/RPC Locator Service)
+# fwkit - local/rpcls.service - Microsoft End Point Mapper (DCE/RPC Locator Service); 135/tcp
 iptables -A INPUT -p tcp --dport 135 -m conntrack --ctstate NEW -j ACCEPT
