--- a/etc/fwkit/services/remote/dns.service
+++ b/etc/fwkit/services/remote/dns.service
@@ -1,3 +1,3 @@
-# fwkit - remote/dns.service
+# fwkit - remote/dns.service - Domain Name Service; 53/tcp, 53/udp
 iptables -A OUTPUT -p tcp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A OUTPUT -p udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
