--- a/etc/fwkit/services/remote/https.service
+++ b/etc/fwkit/services/remote/https.service
@@ -1,2 +1,2 @@
-# fwkit - remote/https.service
+# fwkit - remote/https.service - Hypertext Transfer Protocol over TLS; 443/tcp
 iptables -A OUTPUT -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
