--- a/etc/fwkit/services/remote/kerberos.service
+++ b/etc/fwkit/services/remote/kerberos.service
@@ -1,3 +1,3 @@
-# fwkit - remote/kerberos.service
+# fwkit - remote/kerberos.service - Kerberos v5; 88/tcp, 88/udp
 iptables -A OUTPUT -p tcp --dport 88 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A OUTPUT -p udp --dport 88 -m conntrack --ctstate NEW -j ACCEPT
