--- a/etc/fwkit/services/remote/kpasswd.service
+++ b/etc/fwkit/services/remote/kpasswd.service
@@ -1,3 +1,3 @@
-# fwkit - remote/kpasswd.service - Kerberos kpasswd
+# fwkit - remote/kpasswd.service - Kerberos v5 kpasswd; 464/tcp, 464/udp
 iptables -A OUTPUT -p tcp --dport 464 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A OUTPUT -p udp --dport 464 -m conntrack --ctstate NEW -j ACCEPT
