--- a/etc/fwkit/services/remote/ldap.service
+++ b/etc/fwkit/services/remote/ldap.service
@@ -1,3 +1,3 @@
-# fwkit - remote/ldap.service
+# fwkit - remote/ldap.service - Lightweight Directory Access Protocol; 389/tcp, 389/udp
 iptables -A OUTPUT -p tcp --dport 389 -m conntrack --ctstate NEW -j ACCEPT
 iptables -A OUTPUT -p udp --dport 389 -m conntrack --ctstate NEW -j ACCEPT
