--- a/etc/fwkit/services/remote/msgc-ssl.service
+++ b/etc/fwkit/services/remote/msgc-ssl.service
@@ -1,2 +1,2 @@
-# fwkit - remote/msgc-ssl.service - Microsoft Global Catalog (SSL)
+# fwkit - remote/msgc-ssl.service - Microsoft Global Catalog over TLS (Active Directory); 3269/tcp
 iptables -A OUTPUT -p tcp --dport 3269 -m conntrack --ctstate NEW -j ACCEPT
