--- a/etc/fwkit/services/remote/smtp.service
+++ b/etc/fwkit/services/remote/smtp.service
@@ -1,2 +1,2 @@
-# fwkit - remote/smtp.service
+# fwkit - remote/smtp.service - Simple Message Transfer Protocol; 25/tcp
 iptables -A OUTPUT -p tcp --dport 25 -m conntrack --ctstate NEW -j ACCEPT
