--- a/etc/fwkit/services/remote/ssh.service
+++ b/etc/fwkit/services/remote/ssh.service
@@ -1,2 +1,2 @@
-# fwkit - remote/ssh.service
+# fwkit - remote/ssh.service - Secure Shell Server; 22/tcp
 iptables -A OUTPUT -p tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
