Added pkg_maintainer to .debutize.conf

--- a/.debutize.conf
+++ b/.debutize.conf
@@ -1,4 +1,5 @@
 pkg_name="fwkit"
+pkg_maintainer="Matt Ferris <matt@bueller.ca>"
 pkg_depends="iptables"
 pkg_description="A modular approach to iptables-based firewall rulesets
  fwkit is primarily designed around the concept of roles and services. Roles maintain a collection of enabled services. A ruleset is compiled based on the services enabled for the active role. Roles can be customized to suit any need, and a number of roles are configured by default."
