Updated .debutize.conf to utilize systemd helpers; github issue #9

--- a/.debutize.conf
+++ b/.debutize.conf
@@ -9,3 +9,7 @@ targets="etc/$pkg_name:/etc/ lib/:/lib/ usr/sbin/:/usr/sbin/ var/lib/$pkg_name:/
 conffiles="/etc/fwkit"
 
 prerun="rm var/lib/fwkit/*"
+
+helpers="systemd-enable.postinst systemd-stop-disable.prerm"
+
+service_name="$pkg_name"
