Added man page for fwkit

--- a/.debutize.conf
+++ b/.debutize.conf
@@ -4,7 +4,7 @@ pkg_depends="iptables, iproute2"
 pkg_description="A modular approach to iptables-based firewall rulesets
  fwkit is primarily designed around the concept of roles and services. Roles maintain a collection of enabled services. A ruleset is compiled based on the services enabled for the active role. Roles can be customized to suit any need, and a number of roles are configured by default."
 
-targets="etc/$pkg_name:/etc/ lib/:/lib/ usr/sbin/:/usr/sbin/ var/lib/$pkg_name:/var/lib/ Readme.md:/usr/share/$pkg_name/"
+targets="etc/$pkg_name:/etc/ lib/:/lib/ usr/sbin/:/usr/sbin/ var/lib/$pkg_name:/var/lib/ Readme.md:/usr/share/$pkg_name/ usr/share/man:usr/share/"
 
 conffiles="/etc/fwkit"
 
