Added state to services, renamed transports to connections

--- a/etc/fwkit/services/all/apt-cacher.service
+++ b/etc/fwkit/services/all/apt-cacher.service
@@ -4,7 +4,8 @@
 services:
   apt_cacher:
     description: APT Cache
-    transports:
+    connections:
       -
         protocol: tcp
         listen_port: 3142
+        states: new
