--- a/etc/fwkit/services/all/dhcp.service
+++ b/etc/fwkit/services/all/dhcp.service
@@ -4,10 +4,12 @@
 services:
   dhcp:
     description: DHCP (Dynamic Host Configuration Protocol)
-    transports:
+    connections:
       -
         protocol: udp
         listen_port: 67
+        states: new
       - 
         protocol: udp
         listen_port: 68
+        states: new
