--- a/etc/fwkit/services/all/ldaps.service
+++ b/etc/fwkit/services/all/ldaps.service
@@ -4,7 +4,8 @@
 services:
   ldaps:
     description: Lightweight Directory Access Protocol over TLS
-    transports:
+    connections:
       -
         protocol: tcp
         listen_port: 636
+        states: new
