--- a/etc/fwkit/services/all/rpcbind.service
+++ b/etc/fwkit/services/all/rpcbind.service
@@ -4,10 +4,12 @@
 services:
   rpcbind:
     description: RPC Bind Service
-    transports:
+    connections:
       -
         protocol: tcp
         listen_port: 111
+        states: new
       - 
         protocol: udp
         listen_port: 111
+        states: new
