--- a/etc/fwkit/services/all/tftp.service
+++ b/etc/fwkit/services/all/tftp.service
@@ -5,10 +5,12 @@ services:
   tftp:
     description: TFTP (Trivial File Transfer Protocol)
     modprobe: nf_conntrack_tftp
-    transports:
+    connections:
       -
         protocol: udp
         listen_port: 69
+        states: new
       -
         protocol: udp
         listen_port: 1024:65525
+        states: new
