--- a/etc/fwkit/services/all/http.service
+++ b/etc/fwkit/services/all/http.service
@@ -4,7 +4,8 @@
 services:
   http:
     description: HTTP (HyperText Transfer Protocol)
-    transports:
+    connections:
       -
         protocol: tcp
         listen_port: 80
+        states: new
