--- a/etc/fwkit/services/all/icmp.service
+++ b/etc/fwkit/services/all/icmp.service
@@ -4,7 +4,7 @@
 services:
   icmp:
     description: ICMP (Internet Control Message Protocol)
-    transports:
+    connections:
       -
         family: inet
         protocol: icmp
