--- a/etc/fwkit/services/all/ldap.service
+++ b/etc/fwkit/services/all/ldap.service
@@ -4,10 +4,12 @@
 services:
   ldap:
     description: Lightweight Directory Access Protocol
-    transports:
+    connections:
       -
         protocol: tcp
         listen_port: 389
+        states: new
       - 
         protocol: udp
         listen_port: 389
+        states: new
