--- a/etc/fwkit/services/all/nfs.service
+++ b/etc/fwkit/services/all/nfs.service
@@ -4,16 +4,20 @@
 services:
   nfs:
     description: Network File Service
-    transports:
+    connections:
       -
         protocol: tcp
         listen_port: 2049
+        states: new
       - 
         protocol: udp
         listen_port: 2049
+        states: new
       - 
         protocol: tcp
         listen_port: 1024:65535
+        states: new
       - 
         protocol: udp
         listen_port: 1024:65535
+        states: new
