--- a/etc/fwkit/services/all/nrpe.service
+++ b/etc/fwkit/services/all/nrpe.service
@@ -4,7 +4,8 @@
 services:
   nrpe:
     description: Nagios NRPE Agent
-    transports:
+    connections:
       - 
         protocol: tcp
         listen_port: 5666
+        states: new
