--- a/etc/fwkit/services/all/ntp.service
+++ b/etc/fwkit/services/all/ntp.service
@@ -4,7 +4,8 @@
 services:
   ntp:
     description: Network Time Protocol
-    transports:
+    connections:
       - 
         protocol: udp
         listen_port: 123
+        states: new
