--- a/.debutize.conf
+++ b/.debutize.conf
@@ -1,6 +1,6 @@
 pkg_name="fwkit"
 pkg_maintainer="Matt Ferris <matt@bueller.ca>"
-pkg_depends="iptables, iproute2"
+pkg_depends="iptables, iproute2, libyaml-tiny-perl"
 pkg_description="A modular approach to iptables-based firewall rulesets
  fwkit is primarily designed around the concept of roles and services. Roles maintain a collection of enabled services. A ruleset is compiled based on the services enabled for the active role. Roles can be customized to suit any need, and a number of roles are configured by default."
 
@@ -8,7 +8,7 @@ targets="etc/$pkg_name:/etc/ lib/:/lib/ usr/sbin/:/usr/sbin/ var/lib/$pkg_name:/
 
 conffiles="/etc/fwkit"
 
-prerun="rm var/lib/fwkit/*"
+prerun="/bin/rm var/lib/fwkit/*"
 
 helpers="systemd-enable.postinst systemd-stop-disable.prerm"
 
