Fixed bad protocol; fixes issue#13

--- a/etc/fwkit/services/all/msgc.service
+++ b/etc/fwkit/services/all/msgc.service
@@ -6,6 +6,6 @@ services:
     description: Microsoft Global Catalog (Active Directory)
     connections:
       -
-        protocol: 3268
+        protocol: tcp
         listen_port: 3268
         states: new
